--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </head>
 <body>
   <div class="logo-container">
-    <img src="LOGO.png" alt="LOGO" class="LOGO" />
+    <img src="img/LOGO.png" alt="LOGO" class="LOGO" />
   </div>
 
   <div class="navbar">
